[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ui/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
text = "影牢突破"
align = 2
valign = 1
percent_visible = 0.0

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.8
align = 2

[node name="StartButton" type="Button" parent="MenuContainer"]
text = "开始游戏"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
text = "设置"

[node name="QuitButton" type="Button" parent="MenuContainer"]
text = "退出"